# evernote-to-obsidian

./: .gitignore  README.md  pyproject.toml  update_links.py
src/: __init__.py  backup_manager.py  download_clipping_images.py  enex_parser.py  image_downloader.py  link_resolver.py  main.py  mcp_server.py  translate_md.py
tests/: test_enex_parser.py  test_image_downloader.py  test_link_resolver.py  test_mcp_server.py
