[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project]
name = "evernote-to-obsidian"
version = "1.0.0"
description = "A utility to download Evernote notebooks and convert them to Obsidian-compatible Markdown."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "evernote-backup>=1.9.3",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "pyyaml>=6.0",
    "lxml>=4.9.0",
    "mcp[cli]>=0.1.0"
]

[project.scripts]
evernote-convert = "src.main:main"
evernote-mcp = "src.mcp_server:main"
